--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/rSlider.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/rSlider.css">
 
     <title>Document</title>
 </head>
@@ -52,9 +52,9 @@
             </div>
         </div>
     </div>
-    <script src="JS/gpu-browser.min.js"></script>
-    <script src="JS/rSlider.js"></script>
-    <script src="JS/script-gpu.js"></script>
+    <script src="js/gpu-browser.min.js"></script>
+    <script src="js/rSlider.js"></script>
+    <script src="js/script-gpu.js"></script>
 </body>
 
 </html>
