--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <script src="js/gpu-browser.min.js"></script>
+    <script src="js/gpu-browser-min.js"></script>
     <script src="js/rSlider.js"></script>
     <script src="js/script-gpu.js"></script>
 </body>
