--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/rSlider.css">
 
-    <title>Document</title>
+    <title>Particle Life</title>
 </head>
 
 <body>
